# cmake-buildpack

./: README.md  builder.toml
cpp-cmake-buildpack/: buildpack.toml
parted-builder/: builder.toml
parted-builder/stack/: build.Dockerfile
parted-builder/stack/server/: CMakeLists.txt  main.cpp
parted-builder/stack/server/part/: part.hpp
simple-builder/stack/: build.Dockerfile  run.Dockerfile  stack.toml
stack/: build.Dockerfile  run.Dockerfile
